feat(odc): integrate ODC into dashboard
